--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 .body1 {
-    background-image: url(bckg1.JPG);
+    background-image: url(bckg1.jpg);
     background-size: cover;
     background-position: center;
     font-size: large;
